[package]
name = "authentura-egui-styling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.17"
lazy_static = "1.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
